--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "Damien Arrachequesne",
   "license": "MIT",
   "dependencies": {
+    "csv-parse": "^5.3.5",
     "eiows": "^3.8.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
