--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "dependencies": {
     "csv-parse": "^5.3.5",
+    "dayjs": "^1.11.7",
     "eiows": "^3.8.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0",
@@ -17,6 +18,7 @@
   "scripts": {
     "start": "node --expose-gc server-default.js",
     "start:eiows": "node --expose-gc server-eiows.js",
-    "start:uws": "node --expose-gc server-uws.js"
+    "start:uws": "node --expose-gc server-uws.js",
+    "start:plain-ws": "node --expose-gc server-plain-ws.js"
   }
 }
